[package]
name = "pwx"
version = "0.0.0"
build = "build.rs"

[dependencies]
sha2 = "0.10"
hmac = "0.12"
libc = "0.2"
matches = "0.1"
uuid = "0.5"
docopt = "0.8"
serde = {version  = "1", features = ["derive"]}
rpassword = "4"
secstr = "0.2"
byteorder = "0.5"
chrono = "0.4"
rust-base58 = "0.0.4"
strfmt = "0.1"
dirs = "1.0"
twofish = "0"

[dependencies.gpgagent]
git = "https://codeberg.org/equalsraf/rust-gpgagent.git"

[build-dependencies]
gcc = "0.3"

[[bin]]
name = "pwx"
doc = false

[[bin]]
name = "pwxdiff"
doc = false
